force-app/main/default/objects/SFFR_Campaign_Content_Item__c/SFFR_Campaign_Content_Item__c.object-meta.xml
<CustomObject>
    <label>Campaign Content Item</label>
    <nameField>
        <displayFormat>SCCI-{000000}</displayFormat>
        <label>Campaign Content Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Content Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>