force-app/main/default/objects/SFFR_Campaign_Content_Item__c/fields/SFFR_Type__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Type__c</fullName>
    <inlineHelpText> Determines the type of Campaign Content Item.</inlineHelpText>
    <label>Content Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envelope</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Slip</fullName>
            </value>
            <value>
                <fullName>MarketingFlyer</fullName>
                <label>Marketing Flyer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>