force-app/main/default/objects/SFFR_Campaign_Content_Item__c/fields/SFFT_Campaign_Content__c.field-meta.xml
<CustomField>
    <fullName>SFFT_Campaign_Content__c</fullName>
    <label>Campaign Content</label>
    <referenceTo>SSFR_Campaign_Content__c</referenceTo>
    <relationshipLabel>Campaign Content Items</relationshipLabel>
    <relationshipName>Campaign_Content_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>